App structure using simplified Liftoff, arg parsing using Minimist

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "awesome",
     "handy"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "liftoff": "^2.0.1",
+    "minimist": "^1.1.0"
+  },
   "devDependencies": {},
   "license": "MIT"
 }
