--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "awesome",
     "handy"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/heck/mycmd.js.git"
+  },
   "dependencies": {
     "liftoff": "^2.0.1",
     "minimist": "^1.1.0"
