Converted to using the command package (instead of LiftOff)

--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "url": "git://github.com/heck/mycmd.js.git"
   },
   "dependencies": {
-    "liftoff": "^2.0.1",
-    "minimist": "^1.1.0",
-    "osenv": "^0.1.0"
+    "commander": "^2.7.1",
   },
   "devDependencies": {},
   "license": "MIT"
